[gd_scene load_steps=3 format=3 uid="uid://bbv6xv255hrrd"]

[ext_resource type="Script" path="res://scenes/effects/water/water_spring.gd" id="1_nj8tn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c6j18"]
size = Vector2(4, 2)

[node name="WaterSpring" type="Area2D" groups=["water_spring"]]
z_index = 100
collision_layer = 32
collision_mask = 30
script = ExtResource("1_nj8tn")
collide_dampen = 0.003

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_c6j18")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, 2)
scale = Vector2(0.3, 0.2)

[connection signal="area_shape_entered" from="." to="." method="_on_area_shape_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
